# metasurface-py

./: .gitignore  404.html  CITATION.cff  CLAUDE.md  LICENSE  README.md  SPEC.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/adapters/: index.html
api/backends/: index.html
api/channels/: index.html
api/core/: index.html
api/datasets/: index.html
api/elements/: index.html
api/em/: index.html
api/experiments/: index.html
api/geometry/: index.html
api/io/: index.html
api/optimize/: index.html
api/plotting/: index.html
api/sensing/: index.html
api/surfaces/: index.html
app/: requirements.txt  streamlit_app.py
benchmarks/: bench_directivity.py  bench_quantization_loss.py  bench_ris_snr_scaling.py
docs/api/: adapters.md  backends.md  channels.md  core.md  datasets.md  elements.md  em.md  experiments.md  geometry.md  io.md  optimize.md  plotting.md  sensing.md  surfaces.md
examples/: 01_beam_steering.py  02_gain_vs_scan_angle.py  03_near_field_focusing.py  04_multi_beam.py  05_optimize_steering.py  06_ris_link.py  07_reproduce_wu_zhang2019.py  08_reproduce_basar2019.py
notebooks/: 01_getting_started.ipynb  02_optimization.ipynb  03_ris_link.ipynb  04_sensing_isac.ipynb
search/: search_index.json
src/metasurface_py/: __init__.py
src/metasurface_py/adapters/: __init__.py  lookup.py  skrf.py  validation.py
src/metasurface_py/backends/: __init__.py  jax_backend.py
src/metasurface_py/channels/: __init__.py  antenna_array.py  mimo.py  pathloss.py  result.py  ris_link.py  wideband.py
src/metasurface_py/core/: __init__.py  conventions.py  math_utils.py  types.py  xarray_utils.py
src/metasurface_py/datasets/: __init__.py  (+2 more)
tests/adapters/: test_adapters.py
tests/backends/: test_jax_backend.py
tests/channels/: test_channels.py  test_mimo.py  test_wideband.py
tests/core/: test_conventions.py  test_math_utils.py  test_types.py
tests/datasets/: test_datasets.py
tests/elements/: test_phase_cell.py  test_states.py
tests/em/: test_array_factor.py  test_coupling.py  test_steering.py
tests/experiments/: test_experiments.py
tests/geometry/: test_lattice.py
tests/io/: test_export.py
tests/optimize/: test_optimization.py
tests/plotting/: test_plotting.py
tests/sensing/: test_sensing.py
tests/surfaces/: test_constraints.py  test_metasurface.py
(+42 files in other folders)
