[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metasurface-py"
version = "0.1.0"
description = "Design, analysis, and optimization of programmable electromagnetic metasurfaces"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [{ name = "John Hodge" }]
keywords = [
    "metasurface",
    "RIS",
    "IRS",
    "reconfigurable intelligent surface",
    "beamforming",
    "electromagnetic",
    "antenna",
    "optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "xarray>=2023.1",
    "matplotlib>=3.7",
    "pydantic>=2.0",
    "h5py>=3.8",
]

[project.urls]
Repository = "https://github.com/jman4162/metasurface-py"
Issues = "https://github.com/jman4162/metasurface-py/issues"

[project.optional-dependencies]
jax = ["jax>=0.4", "jaxlib>=0.4"]
rf = ["scikit-rf>=0.30"]
viz = ["seaborn>=0.13", "plotly>=5.0"]
openems = []
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "hypothesis>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metasurface_py"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["metasurface_py"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "h5py.*",
    "skrf.*",
    "pandas.*",
    "seaborn.*",
    "plotly.*",
    "tomli_w.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
